<resources>
    <string name="app_name">Homie_</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user_name">Hello, Joyce!</string>
    <string name="slogan">Make yourself at home</string>
    <string name="home_bottom">Home</string>
    <string name="heart_bottom">Favourite</string>
    <string name="profile_bottom">Profile</string>
    <string name="sign_in_fails">Authentication failed</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_in">Sign-in</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="my_account">My account</string>
    <string name="edit">Edit</string>
    <string name="profile_username">Vũ Vũ</string>
    <string name="profile_full_name">Vũ Thị Thắm</string>
    <string name="profile_email">vuvu7764111@gmail.com</string>
    <string name="orders_status">Orders Status</string>
    <string name="payment">Payment</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="promotion">Promotion</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="purchase">Purchase</string>
    <string name="support">Support</string>
    <string name="statics">Statics</string>
    <string name="title_activity_header_side_menu">header_side_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_description">Arm Chair có kích thước nhỏ, tuy nhiên cực kỳ chắc chắn nhờ được làm từ khung gỗ thông kết hợp với chân gỗ cao su cứng cáp, chịu lực tốt, bạn có thể hoàn toàn yên tâm khi ngồi lên đó. Đây là giải pháp tuyệt vời để bạn có thể thay đổi không gian của mình trở nên mới mẻ hơn. Kiểu dáng nhỏ nhắn, kết hợp cùng những gam màu pastel nhẹ nhàng dễ dàng nhận được nhiều sự chú ý.</string>
    <string name="search">Search</string>
    <string name="add_category">Add Category</string>
    <string name="id">ID *</string>
    <string name="name">Name *</string>
    <string name="add_product">Add Product</string>
    <string name="quantity">Quantity *</string>
    <string name="price">Price *</string>
    <string name="description">Description *</string>
    <string name="discount">Discount *</string>
    <string name="percent">Percent *</string>
    <string name="view_all">View all</string>
    <string name="save">Save</string>
    <string name="lorem_text">Minimalist Styling Is Not About Creating A Cold, Hard, Empty White Box Of A Home. It Is About Using Simple And Natural Forms, And Taking Away Layers Without Losing The Aesthetic Appeal Of The Space. The Focus Is On Shape, With A Furniture And Accessories.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="admin_management">Admin Management</string>
    <string name="check_out">Check out</string>
    <string-array name="status">
        <item>Confirmed</item>
        <item>Shipping</item>
        <item>Done</item>
    </string-array>

</resources>