<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddDiscount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_left_1"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/add_discount_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:text="@string/add_category"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <ImageView
            android:id="@+id/add_discount_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_margin="8dp"
            android:src="@drawable/ic_image"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_discount_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_discount_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_discount_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/percent"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_discount_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/add_discount_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/purple_500"/>
    <Button
        android:id="@+id/add_discount_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="Finish"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"/>


</LinearLayout>