<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ResetPassActivity"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/reset_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_nh"
        android:transitionName="logo_image"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:transitionName="phone_no_tran"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPhonetic"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/reset"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="22sp"
        android:transitionName="login_btn_tran"/>

    <TextView
        android:id="@+id/reset_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="22sp"/>

    <ProgressBar
        android:id="@+id/reset_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>