<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.VerifyPhoneNo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/set_new_pass_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:src="@drawable/logo_nh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_confirm_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/confirm_btn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/confirm"
            android:backgroundTint="@color/purple_500"/>

        <ProgressBar
            android:id="@+id/set_new_pass_progressbar"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_width="wrap_content" />
    </LinearLayout>

</ScrollView>